@@ -23,6 +23,8 @@
         - Add minimize() method to views.
         - Add "setWidget" action for plugin registration.
         - Add clear() method to state objects.
+        - Fix "setWidget" action when the service was closed
+          instead of minimized.
 
         WARNING: If you relied on the former default API endpoint
           being http://localhost:9999/, this will break your
